fixat så att username wrap:ar rätt i mobilvy i logging-wrapper

--- a/tddd27-project/src/components/common/login/Login.css
+++ b/tddd27-project/src/components/common/login/Login.css
@@ -98,4 +98,10 @@
         padding: 5pt;
         background-color: transparent;
     }
+
+    .user-name {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 25vw;
+    }
 }
